capa solicitud exposicion